--- a/PAA_1.ipynb
+++ b/PAA_1.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2bd82024-5bdc-4a8f-9e03-a9299d831b3c",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
        "100"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1cfa32a3-838e-4c1c-bf0a-67deb51bc56b",
    "metadata": {},
    "outputs": [],
@@ -119,10 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "24e630d1-d4f1-4418-ad32-54d8c165146f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal Type: Mammal\n",
+      "Mammals give birth directly\n"
+     ]
+    }
+   ],
    "source": [
     "# Q8. How would you define the superclasses of a class?\n",
     "# Ans: Super class is the parent class of the class. Let's take an example to understand this.\n",
@@ -139,6 +148,14 @@
     "#Here Animal is the super class of Mammal\n",
     "dog = Mammal()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bbe55a7-31ce-4047-b43c-f4543abc9229",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
