--- a/PAA_1.ipynb
+++ b/PAA_1.ipynb
@@ -32,12 +32,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "92caa6af-9844-40d6-8796-7e098421bcbc",
    "metadata": {},
    "source": [
     "#### Q2. Where does an inheritance search look for an attribute?\n",
-    "Ans:"
+    "Ans: An inheritance search looks for an attribute first in the instance object, then in the class the instance was created from, then in all higher superclasses, progressing from left to right (by default). The search stops at the first place the attribute is found."
    ]
   },
   {
