--- a/PAA_3.ipynb
+++ b/PAA_3.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6bafd5c9-216b-4b5d-b7b6-3e7dec3eba6b",
    "metadata": {},
    "outputs": [
@@ -86,25 +86,16 @@
    "metadata": {},
    "source": [
     "### 5. How is the local scope of a class different from that of a function?\n",
-    "Ans: Both are different in nature. Function local variable are not accessable outside of that function. Whereas class local variables are usable outside of the class if they are public variable. User can modify the permission of that variable in the "
+    "Ans: Both are different in nature. Function local variable are not accessable outside of that function. Whereas class local variables are usable outside of the class if they are public variable. User can modify the permission of that variable in the class which is not possible inside a function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ddf85f3-e00a-494a-b1e8-84bd7826905d",
+   "id": "1eb9eb84-bd41-4be8-882a-4e7e0148b2ab",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def test_fun():\n",
-    "    data_var=100\n",
-    "    for i in range(data_var):\n",
-    "        if i%10==0:\n",
-    "            print(i)\n",
-    "\n",
-    "class test:\n",
-    "    def __init__(self)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
